Fix shadow overlapping problem

--- a/react-app/src/styles/app.css
+++ b/react-app/src/styles/app.css
@@ -11,12 +11,13 @@
         "servers main";
     min-height: 100%;
     min-width: 100%;
+    background-color: var(--third-bg-color);
 }
 
 .content {
     grid-area: main;
     display: grid;
-    grid-template-columns: 13rem 1fr;
+    grid-template-columns: 14rem 1fr;
     grid-template-rows: 1fr;
     grid-template-areas:
         "navbar main";
@@ -24,6 +25,16 @@
     min-width: 100%;
 }
 
-.box-shadow-right {
-    box-shadow:  5px 0 5px -5px rgba(0,0,0,0.7);
+.main {
+    grid-area: main;
+    width: 100%;
+    height: 100%;
+}
+
+.left-inset-shadow {
+    box-shadow: 5px 0 5px -5px rgba(0, 0, 0, 0.70) inset;
+}
+
+.header-box-shadow {
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 6px 2px 0px, rgba(60, 64, 67, 0.15) 0px 6px 3px 1px;
 }
